Updated index to contain corrent lib path

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ cond.loadSounds(sounds)
 </div>
 
 
-<script src="./clip-conductor.js/dist/clipConductor.js"></script>
+<script src="dist/clipConductor.min.js"></script>
 <script>
 
 var cond = new ClipConductor();
